source/css/style.css.scss
// =============================================================================
//
// Internet Made in BCN
//
// =============================================================================

// =============================================================================
// 1. Imports
// =============================================================================

// Imports the _base partial which includes the Compass and Sassbox frameworks
@import "base";

// =============================================================================
// 2. Structure
// =============================================================================

body {
	@include respond-to-mobile-only {
		font-size: 80%;
	}
}

img { max-width: 100%; }

.wrapper {
	@include leader(2);
	@include trailer(4);
	max-width: 1180px;
	margin-left: auto;
	margin-right: auto;

	// Makes the wrapper 90% width on tablets and up
	@include respond-to-tablet-portrait-and-up {
		width: 90%;
	}

	// Adds padding on mobile and removes the leader
	@include respond-to-mobile-only {
		@include leader(0);
		padding-left: 1em;
		padding-right: 1em;
	}

}

.masthead {
	@include rhythm($padding-leader: 2, $padding-trailer: 2);
	max-width: 40em;
	margin: 0 auto;
	text-align: center;
}

.mission {
	@include leader(1);
}

.intro {
	@include leader(2);
	color: $gray;
	padding-left: 3em;
	padding-right: 3em;

}

.join {

}

.apply {
	@include box-shadow(inset 0 1px 3px rgba(33,36,45,.25));
	@include respond-to-tablet-portrait-and-up {
		height: 650px;
	}

	@include respond-to-tablet-only {
		height: 970px;
	}

	@include respond-to-mobile-only {
		height: 1100px;
	}
	display: none;
	background: #858891;
	color: $white;
}

.apply-toggle {
	@include trailer(3);
	text-align: center;
}

.apply-rules {
	width: 60%;
	padding: 1em 2em;
	float: left;

	article {
		@include leader(2);

		&:nth-child(1n+2) {
			max-width: 50%;
			padding-right: 1em;
			float: left;

			@include respond-to-mobile-only {
				max-width: none;
				float: none;
				padding-right: 0;
			}
		}

	}


	@include respond-to-tablet-portrait-and-below {
		width: 100%;
		float: none;
	}
}

.apply-form {
	width: 40%;
	padding: 1em 2em;
	float: left;
	background: #505666;

	@include respond-to-tablet-portrait-and-below {
		width: 100%;
	}
}

.startups {
	@include trailing-border(1px, 0);
	padding: 0;
	border-color: $line-color;
	list-style: none;
}

.company {
	@include leading-border(1px, 0);
	border-width: 1px;
	float: left;
	width: 25%;
	height: 320px;
	padding: 1em;
	text-align: center;
	border-color: $line-color;
	border-right: solid 1px $line-color;

	a:hover { text-decoration: none; }

	@include respond-to-tablet-portrait-and-up {
		&:nth-child(4n+0) { border-right: none; }
	}

	@include respond-to-tablet-portrait-and-below {
		width: 33%;
		&:nth-child(3n+0) { border-right: none; }
		&:nth-child(4n+0) { clear: left; }
	}

	@include respond-to-mobile-landscape-and-below {
		width: 100%;
		border-right: none;
	}

	.name {
		text-transform: uppercase;
	}

	.description {
		color: $gray-light;
	}
}

.more-info {
	float: right;
	padding: 1em 2em;
	strong {
		display: block;
	}

	@include respond-to-tablet-portrait-and-below {
		float: none;
	}

}

.creator {
	margin-right: 1em;
}

.nav {
	list-style: none;
	margin: 0;
	padding: 0;

	li { display: inline; }
	a { display: inline-block; }
}

// =============================================================================
// 3. Skin
// =============================================================================

body { background: $gray-lighter; }

.wrapper { background: $white; }

.logo {
	display: block;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 1px;
	color: #535762;

	&:after {
		content: '';
		display: block;
		width: 6em;
		height: 1em;
		margin: .5em auto 0;

		// Logo square colors
		$total-colors: 6;
		$line-width: 100 / $total-colors + 0%;
		@include background-image(linear-gradient(left,
			color-stops(
				#2ba5b7 $line-width,
				#fdf0ba $line-width, #fdf0ba $line-width *2,
				#fcdd4c $line-width * 2, #fcdd4c $line-width * 3,
				#fdcc2f $line-width * 3, #fdcc2f $line-width * 4,
				#fa9229 $line-width * 4, #fa9229 $line-width * 5,
				#f4521f $line-width * 5, #f4521f $line-width * 6
			)
		));
	}
}

.logo__madeinbcn {
	display: block;
}

.btn {
	@include border-radius(4px);
	display: inline-block;
	padding: 3px;
	border: solid 1px #bcc2d1;
	background: #dcdcdc;
	text-align: center;
	font-weight: bold;
	color: #858891;
	cursor: pointer;

	span {
		@include border-radius(3px);
		@include box-shadow(inset 0 1px 0 rgba(255,255,255,.75));

		display: block;
		border: solid 1px #bcc2d1;
		background: #efefef;
		padding: 8px 1em;
	}

	&:hover {
		@include transition(background .25s ease-out);
		text-decoration: none;
		color: #858891;

		span {
			background: $white;
		}
	}

	&:active,
	&.active {
		color: lighten(#858891,20%);
		span {
			@include box-shadow(inset 0 1px 1px rgba(0,0,0,.25));
			background: darken($white, 5%);
		}
	}
}

